python/testData/inspections/PyUnresolvedReferencesInspection/unresolvedBaseClass.py
class C(<error descr="Unresolved reference 'B'">B</error>):
    pass

c = C()
c.foo()